Ticket #350 (assigned enhancement)

Opened 3 years ago

Last modified 9 months ago

GUI for Subpicture filters

Reported by: fkuehne Assigned to: fkuehne (accepted)
Priority: normal Milestone: 1.0.x feature freeze
Component: Mac OS X interface Version: master
Severity: normal Keywords:
Cc: Platform(s): MacOS
Difficulty: easy Work status: 60%

Description (Last modified by fkuehne)

It would be nice to have a GUI to access the subpicture filters (logo, time, marquee, mosaic).

There should be a button in the extended controls panel (Video filters section) and an entry in the Video-menu to show this to-be-created panel. Perhaps it can also be re-used for the wizard, so certain settings can be applied to the MRL of a certain stream only. We should be able to use the same panel for that. One could add a button to the "Transcode 1"-page to open it as a sheet.

The RC-interface's code by markfm and dionoea can be used as a manual for the implementation.

Change History

13/09/05 18:42:02 changed by fkuehne

  • description changed.

03/10/05 18:00:32 changed by fkuehne

  • status changed from new to assigned.
  • wip changed from Not started to Started.

nib is finished

27/11/05 15:35:04 changed by fkuehne

  • wip changed from Started to 20%.

partially working already, should be finished in the 2nd week of december.

03/12/05 14:37:02 changed by fkuehne

(In [13502]) * ALL: first development version of a GUI for the SubPicture? Filters (refs #350) - the marquee section is already completely usable, more to come - TODO:

  • fix all FIXMEs
  • implement the logo and time settings completely
  • implement l10n
  • fix 10.3 compatibility (runs under Tiger only atm)
  • save the preferences, if requested
  • close a current vout and re-open it, when a filter is (de-)activated
  • redesign the GUI to a smaller panel

04/12/05 23:46:04 changed by fkuehne

(In [13554]) * implemented the controls for the logo and time filters (refs #350) * complete l10n support

The usage of the logo-filter doesn't work here, but that might be because of my strange PNG-files. I'll investigate this tomorrow.

It would be nice if some of the OSX-devs and testers could check whether everything works as expected, whether you are able crash the entire thingie, etc. Note that on-the-fly activation of filters doesn't work (this needs the vout-rework scheduled for 0.8.5).

18/02/06 00:39:49 changed by fkuehne

  • milestone changed from 0.8.5 feature freeze to 0.8.6 features freeze.

the sfilter-panel will be removed from svn while finishing 0.8.5 and return afterwards.

13/06/06 23:37:54 changed by fkuehne

  • due_assign changed.
  • include_gantt changed.
  • dependencies changed.
  • due_close changed.
  • wip changed from 20% to 60%.

first step to make it usable committed in [15902]

24/07/06 10:21:33 changed by zorglub

  • component changed from MacOS X interface to Interfaces.
  • summary changed from OSX-GUI for Subpicture filters to GUI for Subpicture filters.

07/08/07 12:10:36 changed by jb

  • component changed from Interfaces to MacOS X interface.

Mostly done for Qt.

22/10/07 17:47:49 changed by fkuehne

Unsure for OSX. Depends on my next week-end. This panel is fairly separate from the ordinary GUI, so it can be easily removed if it doesn't work.

18/01/08 09:06:08 changed by jb

  • milestone changed from 0.9.0 features freeze to 0.9.1-features.