* ALL: first development version of a GUI for the SubPicture Filters (refs #350) - the marquee section is already completely usable, more to come - TODO:     - fix all FIXMEs     - implement the logo and time settings completely     - implement l10n     - fix 10.3 compatibility (runs under Tiger only atm)     - save the preferences, if requested     - close a current vout and re-open it, when a filter is (de-)activated     - redesign the GUI to a smaller panel